Added the quiz name as a main heading on the body and added its CSS styling also

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,12 @@ body {
     max-width: 100%;
     height: auto;
   }
+h1 {
+    font-family: 'butterfly kids', cursive;
+    font-size: 400%;
+    font-weight: 900;
+    color: #FFF;
+  }
 footer {
     width: 100%;
     position: absolute;
