--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,28 @@ h1 {
     font-weight: 900;
     color: #FFF;
   }
+button {
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.welcome-screen
+{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#begin-button
+{
+    font-size: 1.33em;
+    padding: 0.5em 1.8em;
+    border-radius: 0.2em;
+}
 footer {
     width: 100%;
     position: absolute;
