--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,8 @@ button {
     outline: none;
     cursor: pointer;
 }
-.welcome-screen
+.welcome-screen,
+.score-container
 {
     position: absolute;
     top: 0;
@@ -46,11 +47,32 @@ button {
     align-items: center;
     justify-content: center;
 }
-#begin-button
+#begin-button,
+#try-again-button
 {
     font-size: 1.33em;
     padding: 0.5em 1.8em;
     border-radius: 0.2em;
+}
+#try-again-button {
+  margin-top: 0.9em;
+}
+#quiz-container {
+  height: 35rem;
+  width: 75%;
+  max-width: 40em;
+  padding: 3.1rem 1.8rem;
+  margin: 0 auto;
+  border-radius: 0.6em;
+  background-image: url(../images/quiz_background.webp);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  animation: fadeInAnimation ease 1s;
 }
 footer {
     width: 100%;
