--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ button {
   margin: 0 auto;
   border-radius: 0.6em;
   background-image: url(../images/quiz_background.webp);
+  opacity: 0.7;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
