Minor fix in CSS and README files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ footer > p{
 /* main content */
 main {
     background-color: #000;
-    background-image: "assets/images/main_background.webp";
+    background-image: url("assets/images/main_background.webp");
     /* make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     /* add margin at the top to prevent content from being covered by the header */
