--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,3 +105,7 @@ main {
     display: flex;
     flex-direction: column;
 }
+@keyframes fadeInAnimation {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
