Added CSS styling for quiz header and timer within the quiz container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,23 @@ button {
   left: 50%;
   animation: fadeInAnimation ease 1s;
 }
+.quiz-header {
+  margin-bottom: 1.8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 0.5em;
+  border-bottom: 0.1em solid black;
+}
+.timer {
+  background-color: lightgrey;
+  width: 7.5em;
+  border-radius: 1.8em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.7em 1.8em;
+}
 footer {
     width: 100%;
     position: absolute;
