--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,8 @@ button {
   padding: 3.1rem 1.8rem;
   margin: 0 auto;
   border-radius: 0.6em;
-  background-image: url(../images/quiz_background.webp);
+  /*background-image: url(../images/quiz_background.webp);*/
+  background-color: lightgrey;
   opacity: 0.7;
   background-position: center;
   background-repeat: no-repeat;
@@ -86,6 +87,7 @@ button {
   align-items: center;
   padding-bottom: 0.5em;
   border-bottom: 0.1em solid black;
+  background-color: lightgrey;
 }
 .timer {
   background-color: lightgrey;
@@ -135,7 +137,8 @@ main {
 }
 .popup .popuptext {
   visibility: hidden;
-  width: 160px;
+  width: 100%;
+  height: 100vh;
   background-color: #555;
   color: #fff;
   text-align: center;
