Updated a few properties of buttons like background color and text. Added a line break between the three buttons on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ button {
     border: none;
     outline: none;
     cursor: pointer;
-    background-color: #000;
+    background-color: #800080;
 }
 .welcome-screen,
 .score-container
@@ -50,7 +50,7 @@ button {
     align-items: center;
     justify-content: center;
 }
-#begin-button,
+#begin-quiz-button,
 #try-again-button,
 #game-rules-button,
 #submit-spell-button
@@ -126,13 +126,6 @@ footer > p{
 main {
     background-color: #000;
     background-image: url("assets/images/main_background.webp");
-    /* make main element take up any surplus space to push footer down */
-    flex: 1 0 auto;
-    /* add margin at the top to prevent content from being covered by the header */
-    margin-top: 50px;
-    /* enable flex properties for child elements */
-    display: flex;
-    flex-direction: column;
 }
 .popup {
   position: relative;
