--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,20 @@ button {
   justify-content: space-between;
   padding: 0.7em 1.8em;
 }
+.question {
+  text-align: center;
+  font-size: 30px;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.options {
+  font-size: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 .submit-spell-form-container{
   display: flex;
   align-items: center;
@@ -166,23 +180,20 @@ main {
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s;
 }
-
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;} 
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity:1 ;}
-}
 .glow {
   font-size: 80px;
   color: #fff;
   text-align: center;
   animation: glow 1s ease-in-out infinite alternate;
 }
-
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
 @keyframes glow {
   from {
     text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
