Updated font family property for the 3 buttons. Updated text content for a button. Updated JS code for displaying the submit spell form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ button {
     outline: none;
     cursor: pointer;
     background-color: #800080;
+    font-family: 'butterfly kids', cursive;
 }
 .welcome-screen,
 .score-container
