--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,7 @@ button {
 }
 #game-rules-text{
   font-family: 'Times New Roman', Times, serif;
+  display:list-item;
 }
 #try-again-button {
   margin-top: 0.9em;
@@ -108,12 +109,13 @@ button {
   margin-bottom: 20px;
 }
 .options {
-  font-size: 20px;
+  font-size: 60px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   margin-top: 10px;
   margin-bottom: 20px;
+
 }
 .submit-spell-form-container{
   display: flex;
