Updated text displayed in the footer. Minor CSS change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,10 @@ button {
   color: green;
   border-color: green;
 }
+#your-score {
+  font-size: 1.5em;
+  color: white;
+}
 .submit-spell-form-container{
   display: flex;
   align-items: center;
