Changed the background image of quiz container for better readability. Also updated the background of the question display.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ button {
   text-align: center;
   text-decoration: solid;
   text-decoration-color: #FFF;
+  background: rgba(255, 255, 255, 0.3);
   font-size: 30px;
   width: 100%;
   margin-bottom: 20px;
