--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ button {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  z-index: 99;
   animation: fadeInAnimation ease 1s;
 }
 .quiz-header {
