--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,3 +295,20 @@ main {
   0% {opacity: 0;}
   100% {opacity: 1;}
 }
+/* for large screens up to 750px */
+@media screen and (max-width: 750px) {
+  #logo-image {
+      max-width: 70%;
+      height: auto;
+  }
+}
+/* for small screens from 380px and down */
+@media screen and (max-width: 450px) {
+  #quiz-container {
+      padding: 2rem 1rem;
+      height: 40rem;
+  }
+  footer {
+      height: 2rem;
+  }
+}
