--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@ button {
     border-radius: 0.2em;
 }
 #next-question-button{
-  /* align the next button to th centre of the container */
-  align-items: center;
+  display: flex;
+  justify-content: flex-end;
 }
 #try-again-button {
   margin-top: 0.9em;
