Removed logo image and glow effect added to h1 element as it was negatively impacting Lighthouse score. Added validation results screenshots in the README file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ h1 {
     color: #FFF;
     background-color: #000;
     height: fit-content;
+    text-align: center;
   }
 button {
     border: none;
