--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,12 @@ form button:hover {
   text-decoration: underline;
   transition: 0.2s ease-in-out;
 }
+#thankyou-background {
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  min-height: 400px;
+}
 footer {
     width: 100%;
     height: 5%;
