Added position property for h1 element to keep it fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ h1 {
     background-color: #000;
     height: fit-content;
     text-align: center;
+    position: fixed;
   }
 button {
     border: none;
