--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,7 +231,7 @@ main {
   position: relative;
   width: 500px;
   height: 450px;
-  bottom: 40%;
+  bottom: 0;
   left: 0;
   justify-content: center;
   align-items: center;
