--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ h1 {
     height: fit-content;
     text-align: center;
     position: fixed;
+    z-index: 100;
   }
 button {
     border: none;
@@ -231,7 +232,7 @@ main {
   position: relative;
   width: 500px;
   height: 450px;
-  bottom: 0;
+  bottom: 40%;
   left: 0;
   justify-content: center;
   align-items: center;
