--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ h1 {
     height: fit-content;
     text-align: center;
   }
+div a {
+    text-decoration: none;
+    color: inherit;
+  }
 button {
     border: none;
     outline: none;
