Added CSS styling for h1 element to remove text underline

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ h1 {
     background-color: #000;
     height: fit-content;
     text-align: center;
+    text-decoration: none;
   }
 div a {
     text-decoration: none;
