Updated CSS styling for try again button to align it to center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,8 @@ button {
 }
 #try-again-button {
   margin-top: 0.9em;
+  display: flex;
+  align-self: center;
 }
 #quiz-container {
   height: 40rem;
