--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,6 @@ button {
 }
 #try-again-button {
   margin-top: 0.9em;
-  display: flex;
-  align-self: center;
 }
 #quiz-container {
   height: 40rem;
@@ -160,6 +158,7 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
+  align-items: center;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
