--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ button {
 }
 #try-again-button {
   margin-top: 0.9em;
+  display: flex;
 }
 #quiz-container {
   height: 40rem;
@@ -158,6 +159,7 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   position: absolute;
+  display: flex;
   align-items: center;
   transform: translate(-50%, -50%);
   top: 50%;
