Added a new button to close the game rules container for better user experience

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,8 @@ button {
 #next-question-button,
 #try-again-button,
 #submit-spell-button,
-#game-rules-button
+#game-rules-button,
+#ready-button
 {
     font-size: 1.33em;
     padding: 0.5em 1.8em;
